--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Weather App2</title>
     <script
       src="https://kit.fontawesome.com/e4ad6fcc04.js"
@@ -123,6 +123,6 @@
         </div>
       </div>
     </div>
-    <script src="src/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
