--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
         </div>
       </div>
     </div>
+    <small>
+      <a href="https://github.com/ganna27/weather-app" target="_blank">Open source</a>, by Ganna Shcherbak
+    </small>
     <script src="index.js"></script>
   </body>
 </html>
