--- a/index.html
+++ b/index.html
@@ -123,9 +123,11 @@
         </div>
       </div>
     </div>
+    <div class="open">
     <small>
       <a href="https://github.com/ganna27/weather-app" target="_blank">Open source</a>, by Ganna Shcherbak
     </small>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
